<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:summary="@string/summary_intent_login_logout"
        android:title="@string/title_intent_login_logout">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->

    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/summary_intent_apps_upgrade"
        android:title="@string/title_intent_apps_upgrade">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="net.accessiblility.app.store.activity.UpdateQueueActivity"
            android:targetPackage="net.accessiblility.app.store" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/summary_intent_download"
        android:title="@string/title_intent_download">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="net.accessiblility.app.store.activity.DownloadQueueActivity"
            android:targetPackage="net.accessiblility.app.store" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/summary_intent_apps_uninstall"
        android:title="@string/title_intent_apps_uninstall">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="net.accessiblility.app.store.activity.UninstallAppActivity"
            android:targetPackage="net.accessiblility.app.store" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/summary_intent_setting"
        android:title="@string/title_intent_setting">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="net.accessiblility.app.store.activity.SettingActivity"
            android:targetPackage="net.accessiblility.app.store" />
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/summary_intent_personal_data"
        android:title="@string/title_intent_personal_data">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->

    </PreferenceScreen>

    <!--<PreferenceScreen-->
    <!--android:title="@string/title_intent_scoreboard"
     android:summary="@string/summary_intent_scoreboard">-->

    <!--&lt;!&ndash;<intent android:action="android.intent.action.VIEW"&ndash;&gt;-->
    <!--&lt;!&ndash;android:data="http://www.baidu.com" />&ndash;&gt;-->

    <!--</PreferenceScreen>-->

    <PreferenceScreen
        android:key="share_app"
        android:summary="@string/summary_intent_share"
        android:title="@string/title_intent_share">

        <!--<intent android:action="android.intent.action.VIEW"-->
        <!--android:data="http://www.baidu.com" />-->

    </PreferenceScreen>


    <!--<PreferenceCategory android:title="@string/title_ele">-->
    <!--<SwitchPreference-->
    <!--android:title="@string/title_ele_default_setting" android:key="@string/pref_ele_default_setting"-->
    <!--android:defaultValue="@bool/pref_ele_default_value" android:summaryOn="@string/summaryOn_pref_ele_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_ele_default_setting" />-->
    <!--<Preference android:title="@string/title_ele_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:dependency="@string/pref_ele_default_setting" android:key="@string/pref_ele_default_setting" />-->

    <!--<PreferenceScreen-->
    <!--android:title="@string/title_intent_preference"-->
    <!--android:summary="@string/summary_intent_preference">-->

    <!--<intent android:action="android.intent.action.VIEW"-->
    <!--android:data="http://www.baidu.com" />-->

    <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/title_kugou" >-->
    <!--<Preference-->
    <!--android:title="@string/title_kugou_default_setting" android:key="@string/pref_kugou_default_setting"-->
    <!--android:defaultValue="@bool/pref_kugou_default_value" android:summaryOn="@string/summaryOn_pref_kugou_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_kugou_default_setting" />-->
    <!--<Preference  android:title="@string/title_kugou_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:key="@string/pref_kugou_default_setting"  android:dependency="@string/pref_kugou_default_setting"/>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/title_meituan" >-->
    <!--<SwitchPreference-->
    <!--android:title="@string/title_meituan_default_setting" android:key="@string/pref_meituan_default_setting"-->
    <!--android:defaultValue="@bool/pref_meituan_default_value" android:summaryOn="@string/summaryOn_pref_meituan_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_meituan_default_setting" />-->
    <!--<Preference  android:title="@string/title_meituan_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:key="@string/pref_meituan_default_setting"  android:dependency="@string/pref_meituan_default_setting"/>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/title_iflytek" >-->
    <!--<SwitchPreference-->
    <!--android:title="@string/title_iflytek_default_setting" android:key="@string/pref_iflytek_default_setting"-->
    <!--android:defaultValue="@bool/pref_iflytek_default_value" android:summaryOn="@string/summaryOn_pref_iflytek_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_iflytek_default_setting" />-->
    <!--<Preference  android:title="@string/title_iflytek_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:key="@string/pref_iflytek_default_setting"  android:dependency="@string/pref_iflytek_default_setting"/>-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>