<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<PreferenceCategory android:title="@string/title_ele">-->
    <!--<SwitchPreference-->
    <!--android:title="@string/title_ele_default_setting" android:key="@string/pref_ele_default_setting"-->
    <!--android:defaultValue="@bool/pref_ele_default_value" android:summaryOn="@string/summaryOn_pref_ele_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_ele_default_setting" />-->
    <!--<Preference android:title="@string/title_ele_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:dependency="@string/pref_ele_default_setting" android:key="@string/pref_ele_default_setting" />-->

    <!--<PreferenceScreen-->
    <!--android:title="@string/title_intent_preference"-->
    <!--android:summary="@string/summary_intent_preference">-->

    <!--<intent android:action="android.intent.action.VIEW"-->
    <!--android:data="http://www.baidu.com" />-->

    <!--</PreferenceScreen>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/title_kugou" >-->
    <!--<Preference-->
    <!--android:title="@string/title_kugou_default_setting" android:key="@string/pref_kugou_default_setting"-->
    <!--android:defaultValue="@bool/pref_kugou_default_value" android:summaryOn="@string/summaryOn_pref_kugou_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_kugou_default_setting" />-->
    <!--<Preference  android:title="@string/title_kugou_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:key="@string/pref_kugou_default_setting"  android:dependency="@string/pref_kugou_default_setting"/>-->
    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="@string/title_meituan" >-->
    <!--<SwitchPreference-->
    <!--android:title="@string/title_meituan_default_setting" android:key="@string/pref_meituan_default_setting"-->
    <!--android:defaultValue="@bool/pref_meituan_default_value" android:summaryOn="@string/summaryOn_pref_meituan_default_setting"-->
    <!--android:summaryOff="@string/summaryOff_meituan_default_setting" />-->
    <!--<Preference  android:title="@string/title_meituan_clean_data" android:summary="@string/summary_pref_clean_data"-->
    <!--android:key="@string/pref_meituan_default_setting"  android:dependency="@string/pref_meituan_default_setting"/>-->
    <!--</PreferenceCategory>-->


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="checkbox_preference_wifi"
        android:summary="@string/summary_switch__preference_auto_upgrade_tips"
        android:title="@string/title_switch_preference_auto_upgrade"
        />

    <PreferenceScreen
        android:key="preference_screen_intelligence_click"
        android:summary="@string/summary_switch__preference_intelligence_click"
        android:title="@string/title_switch_preference_intelligence_click"

        />

</PreferenceScreen>